--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,15 @@
     --backdrop: rgba(46, 47, 66, 0.4);
     --modal-background: #FCFCFC;
     --subtle: #E7E9FC;
-    --transparent-white: rgba(255, 255, 255, 0.1);;
+    --transparent-white: rgba(255, 255, 255, 0.1);
     --icon-main: #8E8F99;
     --pressed-state: #404BBF;
     --light: #F4F4FD;
     --success: #31D0AA;
-        --input-border: rgba(33, 33, 33, 0.2);
+    --form-border: rgba(33, 33, 33, 0.2);
+    --form-placeholder: rgba(117, 117, 117, 0.5);
+    --footer-placeholder: rgba(255, 255, 255, 0.6);
+    --footer-border: rgba(255, 255, 255, 0.3);
 
     --vertical-card-set-gap: 24px;
 
@@ -209,9 +212,9 @@ header {
         var(--hero-ovrlay-color),
         var(--hero-ovrlay-color)
     ),
-        url(../images/main-page/hero.jpg);
-        background-repeat: no-repeat;
-        max-width: 1440px;
+        url('../images/main-page/hero.jpg');
+    background-repeat: no-repeat;
+    max-width: 1440px;
 }
 
 .hero .container {
@@ -330,13 +333,21 @@ header {
     color: var(--primary-dark);
 }
 
-
 .form-field {
     position: relative;
     display: flex;
     flex-direction: column;
-
+  
     margin-bottom: 8px;
+}
+
+.label-text {
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: calc(16 /12);
+    letter-spacing: 0.04em;
+    color: var(--icon-main);
 }
 
 .form-comment {
@@ -346,11 +357,13 @@ header {
 .form-comment-area,
 .form-input {
     max-width: 360px;
+    height: 40px;
     padding: 8px 38px;
     
-    border: 1px solid var(--input-border);
+    border: 1px solid var(--form-border);
     border-radius: 4px;
     outline: none;
+    transition: border-color var(--main-transition-dur-and-func);
 }
 
 .form-comment-area {
@@ -360,6 +373,14 @@ header {
     padding: 8px 16px;
 }
 
+.form-comment-area::placeholder {
+    font-size: 12px;
+    line-height: calc(16 / 12);
+    letter-spacing: 0.04em;
+
+    color: var(--form-placeholder);
+}
+
 .form-input:focus,
 .form-comment-area:focus {
     border: 1px solid var(--accent-color);
@@ -367,42 +388,68 @@ header {
 
 .form-field .icon {
     position: absolute;
-    top: 26px;
+    bottom: 8px;
     left: 16px;
+
+    transition: fill var(--main-transition-dur-and-func);
 }
 
 .form-field .person {
-    top: 29px;
+    bottom: 11px;
 }
 
 .form-field:focus-within .icon{
     fill: var(--accent-color);
 }
 
-.form-label {
-    margin-bottom: 4px;
+/* ==================Checkbox states=================*/
 
-    font-size: 12px;
-    line-height: calc(16 /12);
-    letter-spacing: 0.04em;
-    color: var(--icon-main);
-}
-
-.checkbox {
-    margin-right: 8px;
+.checkbox-icon {
+    position: absolute;
     width: 16px;
     height: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     border: 1.25px solid var(--primary-dark);
     border-radius: 2px;
+
+    background-color: var(--primary-white);
+    transition: border var(--main-transition-dur-and-func),
+    background var(--main-transition-dur-and-func);
 }
+
+.checkbox:checked ~ .checkbox-icon {
+    background-color: var(--pressed-state);
+    border: 1.25px solid var(--pressed-state);
+}
+
+.checkbox:focus ~ .checkbox-icon {
+    border: 1.25px solid var(--pressed-state);
+}
+
+.checkbox:disabled ~.checkbox-icon {
+    border: 1.25px solid var(--form-border);
+}
+
+.checkbox:checked:disabled ~.checkbox-icon {
+    background-color: var(--form-border);
+    border: 1.25px solid var(--form-border);
+}
+
+/*===================================================*/
 
 .legal-agreement {
     display: flex;
     flex-direction: row;
     justify-items: center;
-
+    
     margin-bottom: 24px;
+}
+
+.legal-agreement .label-text {
+    margin-left: 24px;
 }
 
 .policy-link {
@@ -731,14 +778,14 @@ padding: 96px 0px 120px 0px;
     color: var(--subtle);
 }
 
-.join-heading {
+.footer-heading {
     font-family: 'Roboto';
     font-size: 16px;
     font-weight: 500;
     line-height: calc(24 / 16);
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 
-    color: var(--light);
+    color: var(--primary-white);
 }
 
 .join-networks .list {
@@ -769,5 +816,61 @@ padding: 96px 0px 120px 0px;
 .join-networks .link:hover,
 .join-networks .link:focus {
   background-color: var(--success);
+}
+
+.newsletter {
+    margin-left: auto;
+}
+
+.newsletter .form {
+    display: flex;
+}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    margin-right: 24px;
+    padding: 8px 16px;
+    
+    border: 1px solid var(--footer-border);
+    border-radius: 4px;
+    outline: none;
+
+    background-color: var(--primary-dark);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    transition: border var(--main-transition-dur-and-func);
+}
+
+.footer-input::placeholder {
+    font-size: 12px;
+    line-height: calc(24 / 12);
+    letter-spacing: 0.04em;
+    color: var(--footer-placeholder);
+}
+
+.footer-input:focus {
+    border: 1px solid var(--accent-color);
+}
+
+.subscribe-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 24px;
+    gap: 16px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(24 / 16);
+    letter-spacing: 0.04em;
+    color: var(--primary-white);
+    background-color: var(--accent-color);
+    border-radius: 4px;
+    transition: background-color var(--main-transition-dur-and-func);
+}
+
+.subscribe-button:focus,
+.subscribe-button:hover {
+    background-color: var(--pressed-state);
 }
 
